Move away from string templates!